[package]
name = "crafting-interpreters-rs"
version = "0.1.0"
authors = ["Thomas Peters <thomas.d.peters@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.1.7"
rustyline = "8.0.0"
